--- a/adcookie_payment_package/report/payment_package_report.xml
+++ b/adcookie_payment_package/report/payment_package_report.xml
@@ -2,8 +2,8 @@
 <odoo>
 
 <!-- WARNING - DO NOT MODIFY INDENTATIONS IN THE TEMPLATE BELOW!!! -->
-<template id="payment_package_report"><span t-esc="o.set_windows_coding()"/>412041|1
+<template id="payment_package_report"><span t-esc="set_windows_coding()"/>412041|1
 <t t-foreach="docs" t-as="o"><t t-if="o.move_type == 'in_invoice' or o.move_type == 'in_refund' or o.move_type == 'in_receipt'"><span t-esc="o.set_package_generated()"/>1|<t t-esc="o.get_bank_account()"/>|<t t-esc="o.partner_bank_id.acc_number"/>|<t t-esc="o.partner_id.name"/>|<t t-esc="o.partner_id.city"/> <t t-esc="o.partner_id.street"/> <t t-esc="o.partner_id.zip"/>|<t t-esc="str(o.amount_residual).replace('.', ',')"/>|1|<t t-esc="o.ref"/>|<t t-esc="datetime.date.today().strftime('%d-%m-%Y')"/>|<t t-esc="o.partner_id.vat"/>|
-</t></t><span t-esc="o.set_default_coding()"/></template>
+</t></t><span t-esc="set_default_coding()"/></template>
 
 </odoo>
